--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,15 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "craftcms/cms": "3.0.0.2",
+    "craftcms/cms": "3.0.1",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
     "studioespresso/craft-easyaddressfield": "1.1.1",
     "mmikkel/cp-field-inspect": "1.0.4",
     "verbb/expanded-singles": "1.0.3",
     "clubstudioltd/craft-asset-rev": "v6.0.0",
-    "pennebaker/craft-architect": "2.2.7"
+    "pennebaker/craft-architect": "2.2.8",
+    "barrelstrength/sprout-active": "v2.0.6"
   },
   "autoload": {
     "psr-4": {
