--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "craftcms/cms": "3.0.1",
+    "craftcms/cms": "3.0.2",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
     "studioespresso/craft-easyaddressfield": "1.1.1",
@@ -27,7 +27,9 @@
     "verbb/expanded-singles": "1.0.3",
     "clubstudioltd/craft-asset-rev": "v6.0.0",
     "pennebaker/craft-architect": "2.2.8",
-    "barrelstrength/sprout-active": "v2.0.6"
+    "barrelstrength/sprout-active": "v2.0.6",
+    "rias/craft-colour-swatches": "1.1.0",
+    "nystudio107/craft-similar": "1.0.0"
   },
   "autoload": {
     "psr-4": {
