--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "pennebaker/craft-architect": "2.2.8",
     "barrelstrength/sprout-active": "v2.0.6",
     "rias/craft-colour-swatches": "1.1.0",
-    "nystudio107/craft-similar": "1.0.0"
+    "nystudio107/craft-similar": "1.0.0",
+    "mmikkel/incognito-field": "1.0.0"
   },
   "autoload": {
     "psr-4": {
