--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "craftcms/cms": "3.0.3.1",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
-    "studioespresso/craft-easyaddressfield": "1.1.1",
     "mmikkel/cp-field-inspect": "1.0.4",
     "verbb/expanded-singles": "1.0.3",
     "clubstudioltd/craft-asset-rev": "v6.0.0",
@@ -30,7 +29,8 @@
     "barrelstrength/sprout-active": "v2.0.6",
     "rias/craft-colour-swatches": "1.1.0",
     "nystudio107/craft-similar": "1.0.0",
-    "mmikkel/incognito-field": "1.0.0"
+    "mmikkel/incognito-field": "1.0.0",
+    "verbb/super-table": "2.0.5"
   },
   "autoload": {
     "psr-4": {
