--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "rias/craft-colour-swatches": "1.1.0",
     "nystudio107/craft-similar": "1.0.0",
     "mmikkel/incognito-field": "1.0.0",
-    "verbb/super-table": "2.0.5"
+    "verbb/super-table": "2.0.5",
+    "topshelfcraft/wordsmith": "3.0.2"
   },
   "autoload": {
     "psr-4": {
