--- a/web/assets/bower.json
+++ b/web/assets/bower.json
@@ -24,6 +24,7 @@
     "waypoints": "^4.0.1",
     "jquery_lazyload": "jquery.lazyload#^1.9.7",
     "isotope-layout": "^3.0.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tablesorter": "*"
   }
 }
