--- a/web/assets/bower.json
+++ b/web/assets/bower.json
@@ -25,6 +25,7 @@
     "jquery_lazyload": "jquery.lazyload#^1.9.7",
     "isotope-layout": "^3.0.6",
     "slick-carousel": "^1.8.1",
-    "tablesorter": "*"
+    "tablesorter": "*",
+    "infinite-scroll": "^3.0.4"
   }
 }
