--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,14 @@
     "docs": "https://craftcms.com/docs",
     "rss": "https://craftcms.com/changelog.rss"
   },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "plugins/aei"
+    }
+  ],
   "require": {
-    "craftcms/cms": "3.0.5",
+    "craftcms/cms": "3.0.6",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
     "mmikkel/cp-field-inspect": "1.0.4",
@@ -27,11 +33,11 @@
     "clubstudioltd/craft-asset-rev": "v6.0.0",
     "pennebaker/craft-architect": "2.2.8",
     "barrelstrength/sprout-active": "v2.0.6",
-    "rias/craft-colour-swatches": "1.1.0",
     "nystudio107/craft-similar": "1.0.0",
     "mmikkel/incognito-field": "1.0.0",
-    "verbb/super-table": "2.0.6",
-    "topshelfcraft/wordsmith": "3.0.2"
+    "verbb/super-table": "2.0.7",
+    "topshelfcraft/wordsmith": "3.0.2",
+    "firebelly/aei": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
