--- a/.env.example
+++ b/.env.example
@@ -7,23 +7,19 @@ SECURITY_KEY=""
 # The database driver that will used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
 
-# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DB_SERVER="localhost"
-
-# The database username to connect with
-DB_USER="root"
-
-# The database password to connect with
-DB_PASSWORD=""
-
-# The name of the database to select
-DB_DATABASE=""
-
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
 
-# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
+# Prefix for Craft tables if shared db
 DB_TABLE_PREFIX=""
 
-# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT=""
+DB_SERVER="127.0.0.1"
+DB_USER=""
+DB_PASSWORD=""
+DB_DATABASE=""
+DB_PORT="3306"
+
+DELTEK_DB_SERVER=""
+DELTEK_DB_USER=""
+DELTEK_DB_PASSWORD=""
+DELTEK_DB_DATABASE=""
