--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,12 @@
 <IfModule mod_rewrite.c>
+RewriteEngine On
+# Force single domain
+RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
+RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
+RewriteRule ^(.*)$ http://aei-craft\.firebelly\.co%{REQUEST_URI} [R=301,L]
+</IfModule>
+
+<IfModule mod_rewrite.c>
     RewriteEngine On
 
     # Send would-be 404 requests to Craft
