--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "mmikkel/incognito-field": "1.0.0",
     "verbb/super-table": "2.0.7",
     "topshelfcraft/wordsmith": "3.0.2",
-    "firebelly/aei": "^1.0"
+    "firebelly/aei": "^1.0",
+    "amimpact/command-palette": "3.1.1"
   },
   "autoload": {
     "psr-4": {
