--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "verbb/super-table": "2.0.7",
     "topshelfcraft/wordsmith": "3.0.2",
     "firebelly/aei": "^1.0",
-    "amimpact/command-palette": "3.1.4"
+    "amimpact/command-palette": "3.1.4",
+    "ether/seo": "v3.3.0"
   },
   "autoload": {
     "psr-4": {
