--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,6 +4,9 @@ RewriteEngine On
 RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
 RewriteRule ^(.*)$ http://aei-craft\.firebelly\.co%{REQUEST_URI} [R=301,L]
+
+# Redirect old site /index.php/foo URLs to something we can match on
+RewriteRule ^index.php/(.*)$ /oldsite/$1 [R=301,L,QSA]
 </IfModule>
 
 <IfModule mod_rewrite.c>
