switch to aei webfactional account for staging

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine On
 # Force single domain
 RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
+RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
 RewriteRule ^(.*)$ http://aei-craft\.firebelly\.co%{REQUEST_URI} [R=301,L]
 
 
