--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,10 +1,9 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 # Force single domain
-RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
-RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
 RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
-RewriteRule ^(.*)$ http://aei-craft\.firebelly\.co%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
+RewriteRule ^(.*)$ http://aeieng\.webfactional\.com%{REQUEST_URI} [R=301,L]
 
 
 # Redirect old site /index.php/foo URLs to something we can match on (Craft uses /index.php?p=)
