update plugins, a few deprecation fixes

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "topshelfcraft/wordsmith": "3.0.2",
     "firebelly/aei": "^1.0",
     "amimpact/command-palette": "3.1.4",
-    "ether/seo": "v3.3.0",
+    "ether/seo": "3.3.1",
     "dolphiq/redirect": "1.0.18",
     "verbb/redactor-tweaks": "2.0.2",
     "craftcms/redactor": "2.1.6"
