--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,9 +1,20 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
+
 # Force single domain
+RewriteCond %{REQUEST_URI} !\.well-known
+RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
+RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
+RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
+RewriteRule ^(.*)$ https://www\.aeieng\.com%{REQUEST_URI} [R=301,L]
+
+# Force HTTPS
+RewriteCond %{REQUEST_URI} !\.well-known
+RewriteCond %{HTTP:X-Forwarded-SSL} !on
+RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
 RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
-RewriteRule ^(.*)$ http://aeieng\.webfactional\.com%{REQUEST_URI} [R=301,L]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # Redirect old site /index.php/foo URLs to something we can match on to redirect (Craft uses /index.php?p= so we can't match on requests to ^index.php)
 RewriteRule ^index.php/(.*)$ /oldsite/$1 [R=302,L,QSA]
