--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,16 @@
     }
   ],
   "require": {
-    "craftcms/cms": "3.0.25",
+    "craftcms/cms": "3.0.26.1",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
-    "mmikkel/cp-field-inspect": "1.0.4",
+    "mmikkel/cp-field-inspect": "1.0.5",
     "verbb/expanded-singles": "1.0.4",
     "clubstudioltd/craft-asset-rev": "6.0.1",
     "barrelstrength/sprout-active": "2.0.7",
     "nystudio107/craft-similar": "1.0.3",
     "mmikkel/incognito-field": "1.0.0",
-    "verbb/super-table": "2.0.9",
+    "verbb/super-table": "2.0.10",
     "topshelfcraft/wordsmith": "3.0.2",
     "firebelly/aei": "^1.0",
     "amimpact/command-palette": "3.1.4",
@@ -44,7 +44,8 @@
     "dolphiq/redirect": "1.0.18",
     "verbb/redactor-tweaks": "2.0.2",
     "craftcms/redactor": "2.1.6",
-    "aelvan/imager": "v2.1.0"
+    "aelvan/imager": "v2.1.0",
+    "doublesecretagency/craft-cpcss": "2.1.0"
   },
   "autoload": {
     "psr-4": {
