--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 
+# Less-intensive 404s for missing assets
+RewriteRule \.(jpg|jpeg|png|gif|ico|icns|swf|bmp)$ - [NC,R=404,L]
+
 # Force single domain
 RewriteCond %{REQUEST_URI} !\.well-known
 RewriteCond %{HTTP_HOST} !^aeieng\.com [NC]
