order projects by position, fix two-word office redirects

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -25,19 +25,19 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 RewriteRule ^index\.php/0000/?$ /contact/ [R=301,L]
 RewriteRule ^index\.php/3600/?$ /contact/atlanta [R=301,L]
 RewriteRule ^index\.php/3900/?$ /contact/baltimore [R=301,L]
-RewriteRule ^index\.php/4500/?$ /contact/chapel [R=301,L]
+RewriteRule ^index\.php/4500/?$ /contact/chapel-hill [R=301,L]
 RewriteRule ^index\.php/4700/?$ /contact/chicago [R=301,L]
 RewriteRule ^index\.php/4011/?$ /contact/denver [R=301,L]
 RewriteRule ^index\.php/4100/?$ /contact/gainesville [R=301,L]
 RewriteRule ^index\.php/4800/?$ /contact/houston [R=301,L]
-RewriteRule ^index\.php/3500/?$ /contact/los [R=301,L]
+RewriteRule ^index\.php/3500/?$ /contact/los-angeles [R=301,L]
 RewriteRule ^index\.php/4000/?$ /contact/madison [R=301,L]
 RewriteRule ^index\.php/4900/?$ /contact/phoenix [R=301,L]
 RewriteRule ^index\.php/4201/?$ /contact/portland [R=301,L]
-RewriteRule ^index\.php/4300/?$ /contact/san [R=301,L]
+RewriteRule ^index\.php/4300/?$ /contact/san-francisco [R=301,L]
 RewriteRule ^index\.php/4200/?$ /contact/seattle [R=301,L]
 RewriteRule ^index\.php/4101/?$ /contact/tampa [R=301,L]
-RewriteRule ^index\.php/4600/?$ /contact/washington [R=301,L]
+RewriteRule ^index\.php/4600/?$ /contact/washington-dc [R=301,L]
 RewriteRule ^index\.php/3800/?$ /contact/leicester [R=301,L]
 
 # Just redirect all of the old site URLs (e.g. index.php/foo) to the homepage
