--- a/composer.json
+++ b/composer.json
@@ -27,25 +27,29 @@
     }
   ],
   "require": {
-    "craftcms/cms": "3.1.20.1",
+    "craftcms/cms": "3.3.4.1",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/ckeditor": "1.0.0-beta.2",
-    "mmikkel/cp-field-inspect": "1.0.5",
+    "mmikkel/cp-field-inspect": "1.0.6",
     "verbb/expanded-singles": "1.0.7",
     "clubstudioltd/craft-asset-rev": "6.0.2",
-    "barrelstrength/sprout-active": "2.0.9",
-    "nystudio107/craft-similar": "1.0.5",
+    "barrelstrength/sprout-active": "2.1.0",
+    "nystudio107/craft-similar": "1.0.6",
     "mmikkel/incognito-field": "1.1.1.1",
-    "verbb/super-table": "2.1.16",
-    "topshelfcraft/wordsmith": "3.0.4",
+    "verbb/super-table": "2.3.0",
+    "topshelfcraft/wordsmith": "3.0.5",
     "firebelly/aei": "^1.0",
     "amimpact/command-palette": "3.1.4",
-    "ether/seo": "3.5.4",
-    "dolphiq/redirect": "1.0.20",
+    "ether/seo": "3.6.2",
+    "dolphiq/redirect": "1.0.23",
     "verbb/redactor-tweaks": "2.0.2",
-    "craftcms/redactor": "2.3.2",
-    "aelvan/imager": "v2.1.7",
-    "doublesecretagency/craft-cpcss": "2.1.0"
+    "craftcms/redactor": "2.4.0",
+    "aelvan/imager": "v2.2.0",
+    "doublesecretagency/craft-cpcss": "2.2.0",
+    "craftcms/contact-form": "2.2.5",
+    "madebyraygun/constant-contact": "0.1.2",
+    "aelvan/mailchimp-subscribe": "v2.0.4",
+    "dolphiq/craft3-forms": "1.1.0"
   },
   "autoload": {
     "psr-4": {
