update craft and all plugins

--- a/composer.json
+++ b/composer.json
@@ -27,29 +27,30 @@
     }
   ],
   "require": {
-    "craftcms/cms": "3.3.19",
+    "craftcms/cms": "3.5.12.1",
     "vlucas/phpdotenv": "^2.4.0",
-    "craftcms/ckeditor": "1.0.0-beta.2",
-    "mmikkel/cp-field-inspect": "1.0.7",
-    "verbb/expanded-singles": "1.0.7",
+    "craftcms/ckeditor": "1.0.0-beta.3",
+    "mmikkel/cp-field-inspect": "1.2.2",
+    "verbb/expanded-singles": "1.1.3",
     "clubstudioltd/craft-asset-rev": "6.0.2",
-    "barrelstrength/sprout-active": "2.1.0",
+    "barrelstrength/sprout-active": "2.2.0",
     "nystudio107/craft-similar": "1.0.6",
-    "mmikkel/incognito-field": "1.1.1.1",
-    "verbb/super-table": "2.3.1",
-    "topshelfcraft/wordsmith": "3.1.1",
+    "mmikkel/incognito-field": "1.2.0",
+    "verbb/super-table": "2.6.3",
+    "topshelfcraft/wordsmith": "3.3.0.1",
     "firebelly/aei": "^1.0",
     "amimpact/command-palette": "3.1.4",
-    "ether/seo": "3.6.3",
-    "dolphiq/redirect": "1.0.23",
-    "verbb/redactor-tweaks": "2.0.2",
-    "craftcms/redactor": "2.4.0",
-    "aelvan/imager": "v2.3.1",
-    "doublesecretagency/craft-cpcss": "2.2.0",
+    "ether/seo": "3.6.6",
+    "dolphiq/redirect": "1.1.1",
+    "verbb/redactor-tweaks": "2.0.4",
+    "craftcms/redactor": "2.8.1",
+    "aelvan/imager": "v2.4.0",
+    "doublesecretagency/craft-cpcss": "2.2.1",
     "craftcms/contact-form": "2.2.5",
     "madebyraygun/constant-contact": "0.1.2",
     "aelvan/mailchimp-subscribe": "v2.0.4",
-    "dolphiq/craft3-forms": "1.1.0"
+    "dolphiq/craft3-forms": "1.1.0",
+    "dolphiq/sitemap": "^1.3"
   },
   "autoload": {
     "psr-4": {
