--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     "madebyraygun/constant-contact": "0.1.2",
     "aelvan/mailchimp-subscribe": "v2.0.4",
     "dolphiq/craft3-forms": "1.1.0",
-    "dolphiq/sitemap": "^1.3"
+    "poptin/poptin": "1.1.0",
+    "la-haute-societe/craft-google-tag-manager": "1.1.0"
   },
   "autoload": {
     "psr-4": {
