--- a/web/assets/bower.json
+++ b/web/assets/bower.json
@@ -26,6 +26,7 @@
     "isotope-layout": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "tablesorter": "*",
-    "infinite-scroll": "^3.0.4"
+    "infinite-scroll": "^3.0.4",
+    "js-cookie": "^2.2.1"
   }
 }
