--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 
-# WebFaction: Added for ECE-736060 (?? this was on live site -nate)
+# Added for ECE-736060
 RewriteRule ^autodiscover/autodiscover.xml$ - [F]
 
 # Less-intensive 404s for missing assets
@@ -15,7 +15,7 @@ RewriteRule ^projects/market/([^/]+)/?$ /markets/$1 [R=301,L]
 # Force single domain
 RewriteCond %{REQUEST_URI} !\.well-known
 RewriteCond %{HTTP_HOST} !^aeieng\.com [NC]
-RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
+RewriteCond %{HTTP_HOST} !^aeieng\.opalstacked\.com [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
 RewriteCond %{HTTP_HOST} !^wf\.aeieng\.com [NC]
@@ -25,7 +25,7 @@ RewriteRule ^(.*)$ https://aeieng\.com%{REQUEST_URI} [R=301,L]
 RewriteCond %{REQUEST_URI} !\.well-known
 RewriteCond %{HTTP:X-Forwarded-SSL} !on
 RewriteCond %{HTTP_HOST} !^aei-craft\.firebelly\.co [NC]
-RewriteCond %{HTTP_HOST} !^aeieng\.webfactional\.com [NC]
+RewriteCond %{HTTP_HOST} !^aeieng\.opalstacked\.com [NC]
 RewriteCond %{HTTP_HOST} !^aei-craft\.localhost [NC]
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
